test/expected/explain_o_brackets_2i_i-c++20.out
explain int operator[](int, int)
                       ^
24: error: member operator "[]" must have exactly 1 parameter
